Bug 266285 - wrong display of ipv6 addresses of NFS mounts from fstab in places panel
Summary: wrong display of ipv6 addresses of NFS mounts from fstab in places panel
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: libsolid-fstab (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Mario Bensi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-14 11:21 UTC by armin walland
Modified: 2011-02-14 13:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
link local ipv6 addresses show up like this in dolphin's places panel (42.46 KB, image/png)
2011-02-14 11:21 UTC, armin walland
Details

Note You need to log in before you can comment on or make changes to this bug.
Description armin walland 2011-02-14 11:21:17 UTC
Created attachment 57241 [details]
link local ipv6 addresses show up like this in dolphin's places panel

Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

i have recently migrated my home lan to ipv6 to learn a bit on the subject when i noticed that dolphin doesn't display them correctly in the places panel. i think it's very nice, that dolphin automatically shows nfs mounts in there, just the parsing of ipv6 addresses seems not to work right.

the error appears when using link local addresses (with interface). i don't know if it also appears with publicly routeable addresses, since i don't have one :>

Reproducible: Didn't try

Steps to Reproduce:
in my fstab i have for example an entry like this one:

[fe80::202:44ff:feb9:558%eth0]:/data/user  /mnt/user  nfs4  auto,_netdev,user  0  0



Actual Results:  
it shows up in dolphin as

":202:44ff:feb9:558%eth0]:/data/user on [fe80"




Expected Results:  
i would expect to see
"/data/user on [fe80::202:44ff:feb9:558%eth0]"


it would be especially great, if it was possible to rename automatically added entries. as far as i understood, it is not yet possible to mount hosts with link local addresses via their ipv6 hostname in fstab, since some 'servername6%eth0' syntax does not seem to be supported there.
Comment 1 Mario Bensi 2011-02-14 13:42:41 UTC
I have fixed the parsing of the data

normaly now you can see "/data/user on [fe80::202:44ff:feb9:558%eth0]"

if you checkout the code at this revision :

http://commits.kde.org/kdelibs/52c6efbc1194ce8a03f718ad7c0ce87602767161

i check if we can rename automatically the entries.

Thanks
Mario
Comment 2 armin walland 2011-02-14 13:58:49 UTC
wow! thanks a lot for the light-speed reaction!

hail KDE! ;)