fix pattern to find the product and the vendor

BUG:266285

this code fix this type of entry in fstab :

[fe80::202:44ff:feb9:558%eth0]:/data/user  /mnt/user  nfs4 auto,_netdev,user 0  0